--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
     "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
