--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.1",
     "email-validator": "^2.0.4",
     "firebase": "^10.8.0",
+    "flowbite-react": "^0.7.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
