--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
